force-app/main/default/objects/Punch_List_Item__c/Punch_List_Item__c.object-meta.xml
<CustomObject>
    <description>Individual punch list items raised during pre-commissioning and handover inspections, categorized A/B/C and linked to handover packages.</description>
    <label>Punch List Item</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Punch Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Punch List Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>