force-app/main/default/objects/Punch_List_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Punch List Items</relationshipLabel>
    <relationshipName>Punch_List_Items_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>