force-app/main/default/objects/Punch_List_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A — Safety / Operability</label>
            </value>
            <value>
                <fullName>B</fullName>
                <default>true</default>
                <label>B — Minor / Cosmetic</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C — Deferred</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>