force-app/main/default/objects/Punch_List_Item__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Punch List Items</relationshipLabel>
    <relationshipName>Punch_List_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>