force-app/main/default/objects/Punch_List_Item__c/fields/WBS_Item__c.field-meta.xml
<CustomField>
    <fullName>WBS_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WBS Item</label>
    <referenceTo>WBS_Item__c</referenceTo>
    <relationshipLabel>Punch List Items</relationshipLabel>
    <relationshipName>Punch_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>