force-app/main/default/objects/Punch_List_Item__c/fields/Work_Package__c.field-meta.xml
<CustomField>
    <fullName>Work_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Package</label>
    <referenceTo>Work_Package__c</referenceTo>
    <relationshipLabel>Punch List Items</relationshipLabel>
    <relationshipName>Punch_List_Items</relationshipName>
    <type>Lookup</type>
</CustomField>